Create teachers tab

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
-scipy
-numpy
-argparse
-opencv-python
-pygame
+customtkinter==5.2.2
+Flask==3.1.2
+Flask_SocketIO==5.5.1
+keras==2.13.1
+matplotlib==3.7.5
+mediapipe==0.10.9
+minio==7.2.10
+numpy==1.24.3
+opencv_contrib_python==4.12.0.88
+opencv_python==4.12.0.88
+pandas==2.0.3
+Pillow==12.0.0
+pygame==2.6.1
+python-socketio==5.15.1
+scipy==1.16.3
